[package]
name = "rose_bloom"
version = "0.1.3"
edition = "2021"
license = "MIT OR Unlicense"
repository = "https://github.com/frogtd/rose_bloom"
description = "A concurrent growing element size linked list with stable pointers."
keywords = ["list", "pointers", "concurrent"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
